# aoc

./: .gitignore  Cargo.toml  Dockerfile  aoc.py  day10.py  day11.py  day12.py  day16.py  day17.py  day19.py  day20.py  day22.py  day3.py  day4.py  day5.py  day6.py  day6_matrix.py  day8.py  day9.py  disco.json  fetch_input
2019/: Cargo.toml  intcode.py  test_intcode.py
2020/: Cargo.toml
2021/: aoc.py  day1.py  day10.py  day11.py  day12.dot  day12.py  day13.py  day14.py  day15.py  day16.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day4.py  day5.py  day6.py  day7.py  day9.py
2022/: aoc.scm  day1.scm  day10.scm  day11.scm  day12.scm  day13.scm  day14.scm  day15.scm  day16.scm  day17.scm  day18.scm  day19.scm  day2.scm  day20.scm  day21.scm  day22.scm  day23.scm  day24.scm  day25.scm  day3.scm  day4.scm  day5.scm  day6.scm  day7.scm  day8.scm  day9.scm  fetch_input  grid.scm  run.scm  template.scm
2024/: .gitignore  day01.sql  day02.sh  day03.awk  day04.vim  day05.possum  day06.html  day08.c  day1.sql  day10.pl  day11.hurl  day11.py  day12.f90  day13.jl  day14.zig  day15.elm  day16.lua  day17.go  day17.program  day18.scm  day19.rb  day2.sh  day20.exs  day22.rs  day23.html  day24.ts  day3.awk  day4.vim  day5.possom  day5.sh  day7.hs  day9.erl  languages.txt
2025/: .gitignore  day1.html  day10.html  day11.html  day2.html  day3.html  day4.html  day5.html  day6.html  day7.html  day8.html  day9.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
src/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day17.rs  day18.rs  (+13 more)
(+71 files in other folders)
