[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Adam Kelly <adam@cthulahoops.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.3"
derive_more = "0.13.0"

[[bin]]
name = "day3"
path = "src/day3.rs"
