[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Adam Kelly <adam@cthulahoops.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.3"
derive_more = "0.13.0"
anyhow = "1.0"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"

[[bin]]
name = "day8"
path = "src/day8.rs"

[[bin]]
name = "day9"
path = "src/day9.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"
